move project 1 resources into project 2

--- a/Continuous_Control.ipynb
+++ b/Continuous_Control.ipynb
@@ -17,7 +17,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Jedi Not Working\n",
+    "%config Completer.use_jedi = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,6 +85,7 @@
     }
    ],
    "source": [
+    "\n",
     "# env = UnityEnvironment(file_name='envs/Reacher_Windows_x86_64-one-agent/Reacher.exe')\n",
     "env = UnityEnvironment(file_name='envs/Reacher_Windows_x86_64-twenty-agents/Reacher.exe')"
    ]
@@ -149,7 +160,8 @@
     "# examine the state space \n",
     "states = env_info.vector_observations\n",
     "state_size = states.shape[1]\n",
-    "print('There are {} agents. Each observes a state with length: {}'.format(states.shape[0], state_size))\n",
+    "print(f'There are {states.shape[0]} agents. Each observes a state with '\n",
+    "      f'length: {state_size}')\n",
     "print('The state for the first agent looks like:', states[0])"
    ]
   },
@@ -198,9 +210,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'env' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-11-1baceacf4cb1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'env' is not defined"
+     ]
+    }
+   ],
    "source": [
     "env.close()"
    ]
@@ -216,6 +240,158 @@
     "env_info = env.reset(train_mode=True)[brain_name]\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.1 PPO\n",
+    "\n",
+    "### Model Architecture + Init\n",
+    "...\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Jedi Not Working\n",
+    "# %config Completer.use_jedi = False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import random\n",
+    "\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "# from myagent.agents PPOAgent, DDPGAgent\n",
+    "# from myagent.trainers import MultiAgentTrainer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Control"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cloud = False\n",
+    "one_agent = True\n",
+    "gym_test = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Import"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if cloud:\n",
+    "    raise NotImplementedError(\"TODO\")\n",
+    "elif gym_test:\n",
+    "    import gym\n",
+    "    from myagent.environments import GymEnvironmentMgr\n",
+    "    envh = GymEnvironmentMgr('LunarLanderContinuous-v2')\n",
+    "else:\n",
+    "    from myagent.unity_environments import UnityEnvironmentMultiAgentMgr\n",
+    "    if one_agent:\n",
+    "        file_name='envs/Reacher_Windows_x86_64-one-agent/Reacher.exe'\n",
+    "    else:\n",
+    "        file_name='envs/Reacher_Windows_x86_64-twenty-agents/Reacher.exe'\n",
+    "    envh = UnityEnvironmentMultiAgentMgr(file_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:unityagents:\n",
+      "'Academy' started successfully!\n",
+      "Unity Academy name: Academy\n",
+      "        Number of Brains: 1\n",
+      "        Number of External Brains : 1\n",
+      "        Lesson number : 0\n",
+      "        Reset Parameters :\n",
+      "\t\tgoal_speed -> 1.0\n",
+      "\t\tgoal_size -> 5.0\n",
+      "Unity brain name: ReacherBrain\n",
+      "        Number of Visual Observations (per agent): 0\n",
+      "        Vector Observation space type: continuous\n",
+      "        Vector Observation space size (per agent): 33\n",
+      "        Number of stacked Vector Observation: 1\n",
+      "        Vector Action space type: continuous\n",
+      "        Vector Action space size (per agent): 4\n",
+      "        Vector Action descriptions: , , , \n"
+     ]
+    }
+   ],
+   "source": [
+    "env = envh.start()\n",
+    "state_size = envh.state_size\n",
+    "action_size = envh.action_size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "agent = PPOAgent(state_size=state_size, action_size=action_size, seed_state=42, device=device)\n",
+    "trainer = MultiAgentTrainer(agent, envh, solved=13.0, max_t=20000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
