--- a/Continuous_Control.ipynb
+++ b/Continuous_Control.ipynb
@@ -17,12 +17,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Jedi Not Working\r\n",
-    "# %config Completer.use_jedi = False"
+    "# Jedi Not Working\n",
+    "#  %config Completer.use_jedi = False"
    ]
   },
   {
@@ -286,7 +286,7 @@
     "import torch.nn.functional as F\n",
     "\n",
     "from reacher_agents.ddpg_agent import DDPGAgent\n",
-    "from reacher_agents.trainers import MultiAgentTrainer"
+    "from reacher_agents.trainers import MultiAgentTrainer, SingleAgentTrainer"
    ]
   },
   {
@@ -303,8 +303,8 @@
    "outputs": [],
    "source": [
     "cloud = False\n",
-    "one_agent = False\n",
-    "gym_test = False"
+    "one_agent = True\n",
+    "gym_test = True"
    ]
   },
   {
@@ -321,22 +321,82 @@
    "outputs": [],
    "source": [
     "if cloud:\n",
-    "    raise NotImplementedError(\"TODO\")\n",
+    "    !pip -q install ./python\n",
+    "    from reacher_agents.unity_environments import UnityEnvMgr\n",
+    "    if one_agent:\n",
+    "        file_name='/data/Reacher_One_Linux_NoVis/Reacher_One_Linux_NoVis.x86_64'\n",
+    "        n_workers = 1\n",
+    "        root_name = 'checkpoint-single'\n",
+    "    else:\n",
+    "        file_name='/data/Reacher_Linux_NoVis/Reacher.x86_64'\n",
+    "        n_workers = 20\n",
+    "        root_name = 'checkpoint-multi'\n",
+    "    envh = UnityEnvMgr(file_name)\n",
     "elif gym_test:\n",
     "    import gym\n",
-    "    from reacher_agents.gym_environments import GymEnvironmentMgr\n",
-    "    scenarios = {'lander': 'LunarLanderContinuous-v2',\n",
-    "                 'walker': 'BipedalWalker-v3'}\n",
-    "    envh = GymEnvironmentMgr(scenarios['walker'])\n",
+    "    from reacher_agents.gym_environments import GymContinuousEnvMgr\n",
+    "    n_workers = 1\n",
+    "    scenarios = {'LunarLanderContinuous-v2',\n",
+    "                 'BipedalWalker-v3',\n",
+    "                 'Pendulum-v0'}\n",
+    "    envh = GymContinuousEnvMgr('Pendulum-v0')\n",
+    "    root_name = 'checkpoint-gym'\n",
+    "    Trainer = SingleAgentTrainer\n",
+    "    upper_bound = 2\n",
     "else:\n",
     "    from reacher_agents.unity_environments import UnityEnvMgr\n",
     "    if one_agent:\n",
-    "        file_name='envs/Reacher_Windows_x86_64-one-agent/Reacher.exe'\n",
-    "        n_workers=1\n",
+    "        file_name = 'envs/Reacher_Windows_x86_64-one-agent/Reacher.exe'\n",
+    "        n_workers = 1\n",
+    "        root_name = 'checkpoint-single'\n",
     "    else:\n",
-    "        file_name='envs/Reacher_Windows_x86_64-twenty-agents/Reacher.exe'\n",
-    "        n_workers=20\n",
-    "    envh = UnityEnvMgr(file_name)"
+    "        file_name = 'envs/Reacher_Windows_x86_64-twenty-agents/Reacher.exe'\n",
+    "        n_workers = 20\n",
+    "        root_name = 'checkpoint-multi'\n",
+    "    envh = UnityEnvMgr(file_name)\n",
+    "    Trainer = MultiAgentTrainer\n",
+    "    upper_bound = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Episode 100\tAverage Score: -1284.21\n",
+      "Episode 157\tAverage Score: -1226.80"
+     ]
+    }
+   ],
+   "source": [
+    "with envh as env:\n",
+    "    state_size = envh.state_size\n",
+    "    action_size = envh.action_size\n",
+    "    device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "    # device = torch.device(\"cpu\")\n",
+    "    agent = DDPGAgent(\n",
+    "        state_size=state_size,\n",
+    "        action_size=action_size,\n",
+    "        device=device,\n",
+    "        learn_f=1,\n",
+    "        target_update_f=1,\n",
+    "        upper_bound=upper_bound\n",
+    "    )\n",
+    "    trainer = Trainer(\n",
+    "        agent=agent,\n",
+    "        env=envh,\n",
+    "        n_episodes=3000,\n",
+    "        max_t=1000,\n",
+    "        solved=30.0,\n",
+    "        n_workers=n_workers,\n",
+    "        max_samples=20,\n",
+    "        save_root=root_name,\n",
+    "    )\n",
+    "    scores = trainer.train()"
    ]
   },
   {
@@ -345,76 +405,66 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:unityagents:\n",
-      "'Academy' started successfully!\n",
-      "Unity Academy name: Academy\n",
-      "        Number of Brains: 1\n",
-      "        Number of External Brains : 1\n",
-      "        Lesson number : 0\n",
-      "        Reset Parameters :\n",
-      "\t\tgoal_speed -> 1.0\n",
-      "\t\tgoal_size -> 5.0\n",
-      "Unity brain name: ReacherBrain\n",
-      "        Number of Visual Observations (per agent): 0\n",
-      "        Vector Observation space type: continuous\n",
-      "        Vector Observation space size (per agent): 33\n",
-      "        Number of stacked Vector Observation: 1\n",
-      "        Vector Action space type: continuous\n",
-      "        Vector Action space size (per agent): 4\n",
-      "        Vector Action descriptions: , , , \n"
+      "Episode 100\tAverage Score: -1317.30\n",
+      "Episode 200\tAverage Score: -1250.67\n",
+      "Episode 300\tAverage Score: -1304.98\n",
+      "Episode 400\tAverage Score: -1286.62\n",
+      "Episode 500\tAverage Score: -1351.05\n",
+      "Episode 600\tAverage Score: -1275.93\n",
+      "Episode 700\tAverage Score: -1285.76\n",
+      "Episode 800\tAverage Score: -1253.99\n",
+      "Episode 900\tAverage Score: -1273.31\n",
+      "Episode 1000\tAverage Score: -1317.87\n",
+      "Episode 1100\tAverage Score: -1302.99\n",
+      "Episode 1200\tAverage Score: -1257.91\n",
+      "Episode 1300\tAverage Score: -1296.91\n",
+      "Episode 1400\tAverage Score: -1284.37\n",
+      "Episode 1500\tAverage Score: -1318.39\n",
+      "Episode 1553\tAverage Score: -1332.33"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-2e3b4a7bfb94>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     21\u001b[0m         \u001b[0msave_root\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mroot_name\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m     )\n\u001b[1;32m---> 23\u001b[1;33m     \u001b[0mscores\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtrainer\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mD:\\udacity\\deep-rl\\projects\\p2_reacher\\cont-control\\reacher_agents\\trainers.py\u001b[0m in \u001b[0;36mtrain\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m    109\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0mi_episode\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mn_episodes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    110\u001b[0m             (all_scores, scores_window) = self._run_episode(\n\u001b[1;32m--> 111\u001b[1;33m                 \u001b[0mall_scores\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscores_window\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax_t\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    112\u001b[0m             )\n\u001b[0;32m    113\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mall_scores_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mall_scores\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\udacity\\deep-rl\\projects\\p2_reacher\\cont-control\\reacher_agents\\trainers.py\u001b[0m in \u001b[0;36m_run_episode\u001b[1;34m(self, all_scores, scores_window, max_t)\u001b[0m\n\u001b[0;32m    129\u001b[0m         \u001b[0mnew_scores\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mn_workers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    130\u001b[0m         \u001b[1;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmax_t\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 131\u001b[1;33m             \u001b[0mactions\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0magent\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mact\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstates\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    132\u001b[0m             \u001b[0mnext_states\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrewards\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdones\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0m_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mactions\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    133\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_step_agents\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstates\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mactions\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrewards\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnext_states\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdones\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\udacity\\deep-rl\\projects\\p2_reacher\\cont-control\\reacher_agents\\ddpg_agent.py\u001b[0m in \u001b[0;36mact\u001b[1;34m(self, state, add_noise)\u001b[0m\n\u001b[0;32m    126\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mact\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstate\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0madd_noise\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    127\u001b[0m         \u001b[1;34m\"\"\"Returns actions for given state as per current policy.\"\"\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 128\u001b[1;33m         \u001b[0mstate\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfrom_numpy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdevice\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    129\u001b[0m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mactor_local\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0meval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    130\u001b[0m         \u001b[1;32mwith\u001b[0m \u001b[0mtorch\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mno_grad\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "env = envh.start()\n",
-    "state_size = envh.state_size\n",
-    "action_size = envh.action_size"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
-    "agent = DDPGAgent(\n",
-    "    state_size=state_size,\n",
-    "    action_size=action_size,\n",
-    "    device=device\n",
-    ")\n",
-    "trainer = MultiAgentTrainer(\n",
-    "    agent=agent,\n",
-    "    env=envh,\n",
-    "    n_episodes = 3000,\n",
-    "    max_t=500,\n",
-    "    solved=30.0,\n",
-    "    n_workers=n_workers,\n",
-    "    max_samples=10,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# import ipdb;\n",
-    "# ipdb.set_trace()\n",
-    "scores = trainer.train()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "envh.close()"
+    "# with envh as env:\n",
+    "#     state_size = envh.state_size\n",
+    "#     action_size = envh.action_size\n",
+    "#     device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "#     # device = torch.device(\"cpu\")\n",
+    "#     agent = DDPGAgent(\n",
+    "#         state_size=state_size,\n",
+    "#         action_size=action_size,\n",
+    "#         device=device,\n",
+    "#         learn_f=20,\n",
+    "#         target_update_f=20,\n",
+    "#     )\n",
+    "#     trainer = SingleAgentTrainer(\n",
+    "#         agent=agent,\n",
+    "#         env=envh,\n",
+    "#         n_episodes=3000,\n",
+    "#         max_t=1000,\n",
+    "#         solved=30.0,\n",
+    "#         n_workers=n_workers,\n",
+    "#         max_samples=20,\n",
+    "#         save_root=root_name,\n",
+    "#     )\n",
+    "#     scores = trainer.train()"
    ]
   },
   {
