Still running - added updates to for report and some utility functions for future use

--- a/Continuous_Control.ipynb
+++ b/Continuous_Control.ipynb
@@ -8,9 +8,16 @@
     "\n",
     "---\n",
     "\n",
-    "In this notebook, you will learn how to use the Unity ML-Agents environment for the second project of the [Deep Reinforcement Learning Nanodegree](https://www.udacity.com/course/deep-reinforcement-learning-nanodegree--nd893) program.\n",
-    "\n",
-    "### 1. Start the Environment\n",
+    "In this notebook, you will learn how to use the Unity ML-Agents environment for the second project of the [Deep Reinforcement Learning Nanodegree](https://www.udacity.com/course/deep-reinforcement-learning-nanodegree--nd893) program."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
+   "source": [
+    "## 1. Start the Environment\n",
     "\n",
     "We begin by importing the necessary packages.  If the code cell below returns an error, please revisit the project instructions to double-check that you have installed [Unity ML-Agents](https://github.com/Unity-Technologies/ml-agents/blob/master/docs/Installation.md) and [NumPy](http://www.numpy.org/)."
    ]
@@ -129,7 +136,7 @@
     "toc-hr-collapsed": true
    },
    "source": [
-    "### 2. Examine the State and Action Spaces\n",
+    "## 2. Examine the State and Action Spaces\n",
     "\n",
     "In this environment, a double-jointed arm can move to target locations. A reward of `+0.1` is provided for each step that the agent's hand is in the goal location. Thus, the goal of your agent is to maintain its position at the target location for as many time steps as possible.\n",
     "\n",
@@ -193,7 +200,7 @@
     "toc-hr-collapsed": true
    },
    "source": [
-    "### 3. Take Random Actions in the Environment\n",
+    "## 3. Take Random Actions in the Environment\n",
     "\n",
     "In the next code cell, you will learn how to use the Python API to control the agent and receive feedback from the environment.\n",
     "\n",
@@ -278,15 +285,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.1 DDPG\r"
+    "## 4.1 DDPG"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
+   "source": [
+    "### 4.1.1 Project Architecture"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model Architecture\n",
-    "\n",
     "The Architecture of this project was extended from the model archiecture used \n",
     "in project 1. Primarily, I built an environment manager API such that the minor\n",
     "differences between OpenGym AI environments and Unity Environments can be\n",
@@ -299,13 +313,15 @@
     "1. `EnvironmentMgr` - Each `EnvironmentMgr` class contains common commands the\n",
     "   `Trainer` can interface with to command the environment to `start`, `step`,\n",
     "   `reset`, `get_evn`, and `close`.\n",
+    "   \n",
     "2. `Trainer` - This class is intended to hold all of the properties for the\n",
-    "   experiment and manipulate both the `Agent` and the `Environment`\n",
+    "   experiment and manipulate both the `Agent` and the `Environment`.\n",
+    "   \n",
     "3. `Agent` - This is the class that holds the reinforement learning agent and\n",
     "   manitains a similar structure to other implementations with minor edits for\n",
     "   funciton encapsulation.\n",
     "\n",
-    "### Agent Selection\n",
+    "#### 4.1.1.1 Agent Selection\n",
     "\n",
     "Due to the difficulty of the problem and the ammount of implementations using\n",
     "Deep Deterministic Policy Gradient (DDPG), I chose to implement a similar\n",
@@ -319,7 +335,7 @@
     "for the target Actor and Critic models as well as implementing a way to \n",
     "randomly sample a subset of agents (if n>1) for learning.\n",
     "\n",
-    "### Model Architecture\n",
+    "#### 4.1.1.2 Neural Network Model Architecture\n",
     "\n",
     "After reviewing several times with fellow students and discussing with mentors\n",
     "within the forums. I've selected an `Actor` Model consisting of `4` fully \n",
@@ -342,7 +358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Primary Import"
+    "### 4.1.2 Primary Import and Utility Functionality"
    ]
   },
   {
@@ -467,7 +483,16 @@
     "toc-hr-collapsed": true
    },
    "source": [
-    "### Testing"
+    "### 4.1.3 Functionality and Adhoc Testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This Section is intented to test the functionality of the project and verify \n",
+    "the agent is learning before moving to Hyperparameter Grid Search and Run for\n",
+    "Record"
    ]
   },
   {
@@ -579,7 +604,22 @@
     "toc-hr-collapsed": true
    },
    "source": [
-    "### Grid Search"
+    "### 4.1.4 Grid Search"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This section investigates learning rates of the `Actor` and `Critic` models as\n",
+    "well as learning frequencies."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.1.4.1 Learning Rate Investigation"
    ]
   },
   {
@@ -678,6 +718,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.1.4.2 Learning Frequency Investigation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -742,6 +789,13 @@
     "    print(f'Actor LR: {alr:.1e}\\tCritic LR: {clr:.1e}\\n')\n",
     "    scores = trainer.train()\n",
     "    info.append((alr, clr, scores))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4.1.4.3 Grid Search Results"
    ]
   },
   {
@@ -813,7 +867,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Run for Record"
+    "### 4.1.5 Run for Record"
    ]
   },
   {
@@ -884,7 +938,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 1\tAverage Score: 0.19"
+      "Episode 10\tAverage Score: 0.67\n",
+      "Episode 20\tAverage Score: 0.57\n",
+      "Episode 30\tAverage Score: 0.83\n",
+      "Episode 40\tAverage Score: 1.26\n",
+      "Episode 50\tAverage Score: 1.55\n",
+      "Episode 60\tAverage Score: 1.73\n",
+      "Episode 70\tAverage Score: 1.86\n",
+      "Episode 80\tAverage Score: 1.96\n",
+      "Episode 90\tAverage Score: 2.10\n",
+      "Episode 100\tAverage Score: 2.29\n",
+      "Episode 110\tAverage Score: 2.63\n",
+      "Episode 120\tAverage Score: 2.99\n",
+      "Episode 130\tAverage Score: 3.31\n",
+      "Episode 140\tAverage Score: 3.46\n",
+      "Episode 150\tAverage Score: 3.52\n",
+      "Episode 160\tAverage Score: 3.64\n",
+      "Episode 170\tAverage Score: 3.71\n",
+      "Episode 180\tAverage Score: 3.74\n",
+      "Episode 190\tAverage Score: 3.71\n",
+      "Episode 200\tAverage Score: 3.72\n",
+      "Episode 210\tAverage Score: 3.78\n",
+      "Episode 220\tAverage Score: 3.81\n",
+      "Episode 230\tAverage Score: 3.80\n",
+      "Episode 240\tAverage Score: 3.87\n",
+      "Episode 250\tAverage Score: 4.07\n",
+      "Episode 260\tAverage Score: 4.21\n",
+      "Episode 268\tAverage Score: 4.33"
      ]
     }
    ],
@@ -893,10 +973,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "from collections import named_tuple"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualize"
+    "### 4.1.6 Visualize"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualize the scores of your trained agent. \n",
+    "\n",
+    "* The `i_map` parameter to rotate through the seaborn color palette (paired in \n",
+    "  groups of 2)\n",
+    "  * 0: blue\n",
+    "  * 1: green\n",
+    "  * 2: red\n",
+    "  * 3: orange\n",
+    "  * 4: purple\n"
    ]
   },
   {
@@ -931,7 +1036,7 @@
     "\n",
     "    fig ,ax = plt.subplots(1,1, figsize=(10,8))\n",
     "\n",
-    "    ax = score_df.plot(ax=ax, color=cmap[2*(i_map%3):])\n",
+    "    ax = score_df.plot(ax=ax, color=cmap[2*(i_map%4):])\n",
     "    ax.set_title(f'DDPG Scores vs Time (LR=({alr:.1e}, {clr:.1e}), Lf={lf})')\n",
     "    ax.set_xlabel('Episode #')\n",
     "    ax.set_ylabel('Score')\n",
@@ -943,7 +1048,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Evaluation"
+    "### 4.1.6 Evaluation"
    ]
   },
   {
@@ -989,7 +1094,12 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1025,6 +1135,40 @@
    ],
    "source": [
     "envh.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.2 Results\n",
+    "\n",
+    "As shown above the DDPG implementation provides consistent, albeit slow \n",
+    "learning. The Model was able to solve the environment using `20` agents in \n",
+    "`TBR` epsiodes. Much slower than what was demonstrated in the problem prompt.\n",
+    "The slow learning rate and reducing soft updating to every `20` steps \n",
+    "contributed to this rate. However, increasing learning rates demonstrated \n",
+    "erratic or poor performance at low episode levels (<50). Clearly, more tuning\n",
+    "can improve this learning rate."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4.3 Future Work"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The training for this particular agent is very slow - further tuning of the \n",
+    "hyper parameters should improve efficiency. However, applying newer \n",
+    "Actor/Critic models such as Twin Delayed DDPG (TD3) would be a direct \n",
+    "improvement over the applied DDPG application. Another avenue to explore would\n",
+    "be to investigate an on-policy method such as Asynchronous Actor Critic (A3C)\n",
+    "to evaluate performance directly."
    ]
   },
   {
