Mid run - Stalled

--- a/Continuous_Control.ipynb
+++ b/Continuous_Control.ipynb
@@ -367,7 +367,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%config Completer.use_jedi = False\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %config Completer.use_jedi = False\n",
     "\n",
     "import numpy as np\n",
     "import random\n",
@@ -405,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,6 +554,39 @@
     }
    ],
    "source": [
+    "if CLOUD:\n",
+    "    !pip -q install ./python\n",
+    "\n",
+    "if ENV_TYPE.lower() == 'gym':\n",
+    "    import gym\n",
+    "    from reacher_agents.gym_environments import GymContinuousEnvMgr\n",
+    "#     scenarios = {'LunarLanderContinuous-v2',\n",
+    "#                  'BipedalWalker-v3',\n",
+    "#                  'Pendulum-v0'}\n",
+    "    envh = GymContinuousEnvMgr('Pendulum-v0')\n",
+    "    root_name = 'gym'\n",
+    "    Trainer = SingleAgentTrainer\n",
+    "    upper_bound = 2.0\n",
+    "    solved = -250\n",
+    "else:\n",
+    "    from reacher_agents.unity_environments import UnityEnvMgr\n",
+    "    if N_WORKERS == 1:\n",
+    "        file_name = 'envs/Reacher_Windows_x86_64-one-agent/Reacher.exe'\n",
+    "        root_name = 'multi'\n",
+    "    else:\n",
+    "        file_name = 'envs/Reacher_Windows_x86_64-twenty-agents/Reacher.exe'\n",
+    "        root_name = 'single'\n",
+    "    envh = UnityEnvMgr(file_name)\n",
+    "    Trainer = MultiAgentTrainer\n",
+    "    upper_bound = 1.0\n",
+    "    solved = 30.0\n",
+    "\n",
+    "if CLOUD:\n",
+    "    if one_agent:\n",
+    "        file_name='/data/Reacher_One_Linux_NoVis/Reacher_One_Linux_NoVis.x86_64'\n",
+    "    else:\n",
+    "        file_name='/data/Reacher_Linux_NoVis/Reacher.x86_64'\n",
+    "    envh = UnityEnvMgr(file_name)\n",
     "env = envh.start()\n",
     "state_size = envh.state_size\n",
     "action_size = envh.action_size\n",
@@ -898,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -931,6 +993,88 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cuda', index=0)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
+    "device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cuda.is_available()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "device(type='cuda', index=0)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trainer.agent.device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# trainer.agent.load('checkpoints/single-checkpoint_actor-4.8.pth', 'checkpoints/single-checkpoint_critic-4.8.pth')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trainer.agent.load(\n",
+    "    'checkpoints/single-agent-checkpoint_actor-6.8.pth',\n",
+    "    'checkpoints/single-agent-checkpoint_critic-6.8.pth'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -938,48 +1082,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Episode 10\tAverage Score: 0.67\n",
-      "Episode 20\tAverage Score: 0.57\n",
-      "Episode 30\tAverage Score: 0.83\n",
-      "Episode 40\tAverage Score: 1.26\n",
-      "Episode 50\tAverage Score: 1.55\n",
-      "Episode 60\tAverage Score: 1.73\n",
-      "Episode 70\tAverage Score: 1.86\n",
-      "Episode 80\tAverage Score: 1.96\n",
-      "Episode 90\tAverage Score: 2.10\n",
-      "Episode 100\tAverage Score: 2.29\n",
-      "Episode 110\tAverage Score: 2.63\n",
-      "Episode 120\tAverage Score: 2.99\n",
-      "Episode 130\tAverage Score: 3.31\n",
-      "Episode 140\tAverage Score: 3.46\n",
-      "Episode 150\tAverage Score: 3.52\n",
-      "Episode 160\tAverage Score: 3.64\n",
-      "Episode 170\tAverage Score: 3.71\n",
-      "Episode 180\tAverage Score: 3.74\n",
-      "Episode 190\tAverage Score: 3.71\n",
-      "Episode 200\tAverage Score: 3.72\n",
-      "Episode 210\tAverage Score: 3.78\n",
-      "Episode 220\tAverage Score: 3.81\n",
-      "Episode 230\tAverage Score: 3.80\n",
-      "Episode 240\tAverage Score: 3.87\n",
-      "Episode 250\tAverage Score: 4.07\n",
-      "Episode 260\tAverage Score: 4.21\n",
-      "Episode 268\tAverage Score: 4.33"
+      "Episode 10\tAverage Score: 13.70\n",
+      "Episode 20\tAverage Score: 15.86\n",
+      "Episode 30\tAverage Score: 18.44\n",
+      "Episode 40\tAverage Score: 20.37\n",
+      "Episode 50\tAverage Score: 21.03\n",
+      "Episode 60\tAverage Score: 21.69\n",
+      "Episode 70\tAverage Score: 22.53\n",
+      "Episode 80\tAverage Score: 23.20\n",
+      "Episode 90\tAverage Score: 23.59\n",
+      "Episode 100\tAverage Score: 24.05\n",
+      "Episode 110\tAverage Score: 25.34\n",
+      "Episode 120\tAverage Score: 26.11\n",
+      "Episode 130\tAverage Score: 26.51\n",
+      "Episode 140\tAverage Score: 26.65\n",
+      "Episode 150\tAverage Score: 26.88\n",
+      "Episode 160\tAverage Score: 27.04\n",
+      "Episode 170\tAverage Score: 26.88\n",
+      "Episode 180\tAverage Score: 26.71\n",
+      "Episode 190\tAverage Score: 26.62\n",
+      "Episode 200\tAverage Score: 26.41\n",
+      "Episode 210\tAverage Score: 26.29\n",
+      "Episode 220\tAverage Score: 26.41\n",
+      "Episode 230\tAverage Score: 26.33\n",
+      "Episode 240\tAverage Score: 26.34\n",
+      "Episode 250\tAverage Score: 26.41\n",
+      "Episode 260\tAverage Score: 26.41\n",
+      "Episode 270\tAverage Score: 26.48\n",
+      "Episode 278\tAverage Score: 26.58"
      ]
     }
    ],
    "source": [
     "scores = trainer.train()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pickle\n",
-    "from collections import named_tuple"
    ]
   },
   {
@@ -1002,6 +1137,19 @@
     "  * 2: red\n",
     "  * 3: orange\n",
     "  * 4: purple\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scores68 = trainer.read_scores('checkpoints/scores to checkpoint-6.8.pkl')\n",
+    "scores = trainer.read_scores('checkpoints/single-scores-checkpoint-270run.pkl')\n",
+    "scores68.extend(scores)\n",
+    "trainer.scores_ = scores68\n",
+    "trainer.n_workers = 20"
    ]
   },
   {
